syntax = "proto3";

service RegistrationService {
    rpc validateRegistrationToken(RegistrationRequest) returns (TokenResponse) {}
    rpc addUser(AddUserRequest) returns (GenericResponse) {}
    rpc saveDeviceInfo (DeviceInfo) returns (GenericResponse) {}
    rpc createRating(Rating) returns (Rating){}
}

message RegistrationRequest {
    string deviceInfo = 1;
    optional string onPrem_id = 2;
    string token = 3;
}

message TokenResponse {
    int32 status = 1;
    optional string message = 2;
    optional string email = 3;
    optional string name = 4;
    optional string type = 5;
    optional string user_id = 6;
    optional string firstName = 7;
    optional string lastName = 8;
    optional string dob = 9;
    optional string id = 10;
    optional int32 iat = 11;
    optional string rejected = 12;
}

message AddUserRequest {
    string dob = 1;
    string email = 2;
    string firstName = 3;
    string gender = 4;
    RegImageData imageData = 5;
    string lastName = 6;
    string phoneNumber = 7;
    string type = 8;
    optional string user_id = 9;
}

message Rating {
    optional int32 rating = 1;
    optional string comment = 2;
    optional string email = 3;
    optional string _id = 4;
    optional int32 status = 5;
    optional string message = 6;
}


message RegImageData {
    repeated string straight = 1;
    repeated string right = 2;
    repeated string left = 3;
}

message GenericResponse {
    int32 status = 1;
    string message = 2;
}

message DeviceInfo {
    string userAgent = 1;
    string os = 2;
    string browser = 3;
    string device = 4;
    string os_version = 5;
    string browser_version = 6;
}

